fix on mobile

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -495,6 +495,22 @@ input.submit {
   nav {
     font-size: 0.75em
   }
+  
+  .profile-name,
+  .project-header {
+    font-size: 28px; /* Smaller than desktop's 38px */
+  }
+  
+  .details-block {
+    padding: 12px; /* Less padding than desktop's 20px */
+    margin-bottom: 16px;
+  }
+  
+  .title-holder {
+    margin-top: 32px; /* Reduced from desktop's 48px */
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+  }
 }
 
 @media only screen and (min-width: 480px) {
